--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,15 @@
 cmake_minimum_required(VERSION 2.8)
-project(BRDF_Viewer)
 
-# Output location of the final C++ binary.
-set(BINARY_NAME bin/brdf_viewer)
+# High Level setup ------------------------------------------------------------
+project(BRDF_Viewer) # Project name.
+set(BINARY_NAME bin/brdf_viewer) # Output location of the final C++ binary.
+set(CMAKE_BUILD_TYPE Release) # Choose from {Debug, Release}.  Affects 
+# optimization & debug symbols.
+set(CMAKE_MODULE_PATH CMakeModules) # Location of the Find.*.cmake files.
 
-# Set this to "Debug" if you want debug symbols for gdb and no optimization.
-set(CMAKE_BUILD_TYPE Release)
+# Find source and header files ------------------------------------------------
 
-# This sets the location of the Find.*.cmake files.
-set(CMAKE_MODULE_PATH CMakeModules)
-
-# Locations of header files
+# Locations of header files.
 include_directories(${BRDF_Viewer_SOURCE_DIR}/brdf)
 include_directories(${BRDF_Viewer_SOURCE_DIR}/brdf/ptex)
 include_directories(${BRDF_Viewer_SOURCE_DIR}/shaderTemplates)
@@ -20,16 +19,13 @@ file(GLOB brdf_SRC            "src/brdf/*cpp"           )
 file(GLOB brdf_ptex_SRC       "src/brdf/ptex/*cpp"      )
 file(GLOB shaderTemplates_SRC "src/shaderTemplates/*cpp")
 
-# Print all source files for debugging purposes.
+# Print debugging info --------------------------------------------------------
 message(STATUS "Source files:")
 foreach(FILE ${brdf_SRC})
     message(STATUS "\t${FILE}")
 endforeach()
 
-# Add the binary --------------------------------------------------------------
-add_executable(${BINARY_NAME}  ${brdf_SRC} ${brdf_ptex_SRC}  ${QT_MOCED_HEADERS})
-
-# QT --------------------------------------------------------------------------
+# QT MOC Related --------------------------------------------------------------
 find_package(Qt4 COMPONENTS QtCore QtGui QtOpenGL REQUIRED)
 
 # Find files we need to invoke QT MOC on.
@@ -46,6 +42,11 @@ QT4_WRAP_CPP(QT_MOCED_HEADERS ${QT_FILES_TO_MOC})
 #QT includes.
 include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
+
+# Add the binary --------------------------------------------------------------
+add_executable(${BINARY_NAME}  ${brdf_SRC} ${brdf_ptex_SRC}  ${QT_MOCED_HEADERS})
+
+# QT library stuff ------------------------------------------------------------
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(${BINARY_NAME} ${QT_LIBRARIES})
 
@@ -69,9 +70,9 @@ else()
     message(FATAL_ERROR "Failed to find GLEW!")
 endif()
 
-
 #Hack! TODO FIX
 target_link_libraries(${BINARY_NAME} GL GLU glut)
+
 
 
 
