Added TODO's relavent places, got code building, and added ./bin directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 # High Level setup ------------------------------------------------------------
 project(BRDF_Viewer) # Project name.
 set(BINARY_NAME bin/brdf_viewer) # Output location of the final C++ binary.
-set(CMAKE_BUILD_TYPE Release) # Choose from {Debug, Release}.  Affects 
+set(CMAKE_BUILD_TYPE Release) # Choose from {Debug, Release}.  Affects
 # optimization & debug symbols.
 set(CMAKE_MODULE_PATH CMakeModules) # Location of the Find.*.cmake files.
 
@@ -50,7 +50,7 @@ add_executable(${BINARY_NAME}  ${brdf_SRC} ${brdf_ptex_SRC}  ${QT_MOCED_HEADERS}
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(${BINARY_NAME} ${QT_LIBRARIES})
 
-# pthreads --------------------------------------------------------------------
+# pthreads library ------------------------------------------------------------
 set(CMAKE_THREAD_PREFER_PTHREAD 1) #In the presence of choices, use pthreads
 find_package(Threads REQUIRED)
 if(${Threads_FOUND})
@@ -60,7 +60,23 @@ else()
     message(FATAL_ERROR "Could not find a suitable threads library(usually pthreads)!")
 endif()
 
-# GLEW ------------------------------------------------------------------------
+# OpenGL and GLU libraries ----------------------------------------------------
+find_package(OpenGL)
+if(${OPENGL_FOUND})
+    message("Found OpenGL at ${OPENGL_INCLUDE_DIR}")
+    TARGET_LINK_LIBRARIES(${BINARY_NAME} ${OPENGL_LIBRARIES})
+    INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
+else()
+    message(FATAL_ERROR "Failed to find OpenGL!")
+endif()
+if(${OPENGL_GLU_FOUND})
+    message("Found OpenGL GLU at ${OEPNGL_glu_LIBRARY}")
+    TARGET_LINK_LIBRARIES(${BINARY_NAME} ${OPENGL_glu_LIBRARY})
+else()
+    message(FATAL_ERROR "Failed to find OpenGL GLU!")
+endif()
+
+# GLEW library ----------------------------------------------------------------
 find_package(GLEW REQUIRED)
 if(${GLEW_FOUND})
     message("Found GLEW at ${GLEW_INCLUDE_PATH}")
@@ -69,10 +85,4 @@ if(${GLEW_FOUND})
 else()
     message(FATAL_ERROR "Failed to find GLEW!")
 endif()
-
-#Hack! TODO FIX
-target_link_libraries(${BINARY_NAME} GL GLU glut)
-
-
-
 
